# mittens-py

./: .gitignore  LICENSE  README.md  pyproject.toml
mittens/: __init__.py  __main__.py  api.py  artifacts.py  async_orchestrator.py  capabilities.py  cli.py  config.py  db.py  hooks.py  ledger.py  llm.py  mcp_server.py  orchestrator.py  parser.py  plugin_api.py  plugins.py  registry.py  session.py  types.py  worktrees.py  ws.py
mittens/static/: app.js  index.html  style.css
tests/: test_api.py  test_async_orchestrator.py  test_db.py  test_ledger.py  test_mcp_server.py  test_orchestrator.py  test_parser.py  test_plugins.py  test_registry.py  test_session.py  test_worktrees.py  test_ws.py
